<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".productDeteils">

    <include
        android:id="@+id/nav_bar"
        layout="@layout/bottom_nav_bar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detailsProductImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/productimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/detailsRateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/rating"
                app:layout_constraintBottom_toBottomOf="@+id/detailsRateImage"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/detailsRateImage"
                android:layout_width="16dp"
                android:layout_height="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/detailsTitleText"
                app:layout_constraintStart_toEndOf="@+id/detailsRateText"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/detailsTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/title"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailsProductImage" />

            <TextView
                android:id="@+id/detailsPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                app:layout_constraintBottom_toBottomOf="@+id/detailsTitleText"
                app:layout_constraintEnd_toStartOf="@+id/detailsCurrencyText" />

            <TextView
                android:id="@+id/detailsCurrencyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/currency"
                app:layout_constraintBottom_toBottomOf="@+id/detailsPriceText"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/detailsDesciptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/descrizione"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailsTitleText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>